name:           Scheme48Hours
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         zab7ge

executable Scheme48Hours
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   parsec >=3.1.3 && <3.2,
                   array >=0.4.0 && <0.5,
                   mtl >=2.1.2 && <2.2
  ghc-options:     -Wall

